--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FlashLFQ" Version="0.1.95" />
+    <PackageReference Include="FlashLFQ" Version="0.1.98" />
     <PackageReference Include="mzLib" Version="1.0.246" />
     <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.2" />
     <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.2" />
