--- a/TaskLayer/TaskLayer.csproj
+++ b/TaskLayer/TaskLayer.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>;net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FlashLFQ" Version="0.1.95" />
+    <PackageReference Include="FlashLFQ" Version="0.1.98" />
     <PackageReference Include="MathNet.Numerics" Version="3.20.0" />
     <PackageReference Include="mzLib" Version="1.0.246" />
     <PackageReference Include="NetSerializer" Version="4.1.0" />
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   
-  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
-    <DefineConstants>ONLYNETSTANDARD</DefineConstants>
+  <PropertyGroup Condition="'$(TargetFramework)'=='net461'">
+    <DefineConstants>NET461</DefineConstants>
   </PropertyGroup>
 
   
