--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,206 +1,37 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NUnit3TestAdapter.3.8.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.8.0\build\net35\NUnit3TestAdapter.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D2C9BF1-3D9C-4D97-9F1B-F4F7167F533B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SonarQubeExclude>true</SonarQubeExclude>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <LangVersion>default</LangVersion>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <LangVersion>default</LangVersion>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\Chemistry.dll</HintPath>
-    </Reference>
-    <Reference Include="FlashLFQ, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\FlashLFQ.0.1.95\lib\net461\FlashLFQ.dll</HintPath>
-    </Reference>
-    <Reference Include="ManagedThermoHelperLayer, Version=1.0.246.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\ManagedThermoHelperLayer.dll</HintPath>
-    </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\MassSpectrometry.dll</HintPath>
-    </Reference>
-    <Reference Include="MathNet.Numerics, Version=3.20.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MathNet.Numerics.3.20.0\lib\net40\MathNet.Numerics.dll</HintPath>
-    </Reference>
-    <Reference Include="mzIdentML, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\mzIdentML.dll</HintPath>
-    </Reference>
-    <Reference Include="MzLibUtil, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\MzLibUtil.dll</HintPath>
-    </Reference>
-    <Reference Include="MzML, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\MzML.dll</HintPath>
-    </Reference>
-    <Reference Include="Nett, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nett.0.8.0\lib\Net40\Nett.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="pepXML, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\pepXML.dll</HintPath>
-    </Reference>
-    <Reference Include="Proteomics, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\Proteomics.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.AdaBoost, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.AdaBoost.0.26.2\lib\netstandard2.0\SharpLearning.AdaBoost.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.Common.Interfaces, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Common.Interfaces.0.26.2\lib\netstandard2.0\SharpLearning.Common.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.Containers, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Containers.0.26.2\lib\netstandard2.0\SharpLearning.Containers.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.CrossValidation, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.CrossValidation.0.26.2\lib\netstandard2.0\SharpLearning.CrossValidation.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.DecisionTrees, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.DecisionTrees.0.26.2\lib\netstandard2.0\SharpLearning.DecisionTrees.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.Ensemble, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Ensemble.0.26.2\lib\netstandard2.0\SharpLearning.Ensemble.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.GradientBoost, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.GradientBoost.0.26.2\lib\netstandard2.0\SharpLearning.GradientBoost.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.InputOutput, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.InputOutput.0.26.2\lib\netstandard2.0\SharpLearning.InputOutput.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.Metrics, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.Metrics.0.26.2\lib\netstandard2.0\SharpLearning.Metrics.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpLearning.RandomForest, Version=0.26.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpLearning.RandomForest.0.26.2\lib\netstandard2.0\SharpLearning.RandomForest.dll</HintPath>
-    </Reference>
-    <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\Spectra.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Thermo, Version=1.0.246.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\Thermo.dll</HintPath>
-    </Reference>
-    <Reference Include="UsefulProteomicsDatabases, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\mzLib.1.0.246\lib\net45\UsefulProteomicsDatabases.dll</HintPath>
-    </Reference>
+    <PackageReference Include="FlashLFQ" Version="0.1.98" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="mzLib" Version="1.0.246" />
+    <PackageReference Include="NUnit" Version="3.8.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
+    <PackageReference Include="SharpLearning.AdaBoost" Version="0.26.2" />
+    <PackageReference Include="SharpLearning.RandomForest" Version="0.26.2" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="AddCompIonsTest.cs" />
-    <Compile Include="AmbiguityTest.cs" />
-    <Compile Include="ModificationAnalysisTest.cs" />
-    <Compile Include="AnalysisEngineTest.cs" />
-    <Compile Include="FdrTest.cs" />
-    <Compile Include="BinGenerationTest.cs" />
-    <Compile Include="SeqCoverageTest.cs" />
-    <Compile Include="SearchWithPeptidesAddedInParsimony.cs" />
-    <Compile Include="StefanParsimonyTest.cs" />
-    <Compile Include="SlicedTest.cs" />
-    <Compile Include="FakeMsDataFile.cs" />
-    <Compile Include="LocalizationTest.cs" />
-    <Compile Include="MyPeptideTest.cs" />
-    <Compile Include="MyTaskTest.cs" />
-    <Compile Include="RobTest.cs" />
-    <Compile Include="ModFitsTest.cs" />
-    <Compile Include="CoIsolationTests.cs" />
-    <Compile Include="SearchModesTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SonarQubeExclude>true</SonarQubeExclude>
-    </Compile>
-    <Compile Include="SetUpTests.cs" />
-    <Compile Include="GPTMDengineTest.cs" />
-    <Compile Include="IndexEngineTest.cs" />
-    <Compile Include="SearchEngineTests.cs" />
-    <Compile Include="TestDataFile.cs" />
-    <Compile Include="TestPsm.cs" />
-    <Compile Include="TestToml.cs" />
-    <Compile Include="TestScan.cs" />
-    <Compile Include="MyEngineTest.cs" />
-    <Compile Include="XLTest.cs" />
+    <ProjectReference Include="..\EngineLayer\EngineLayer.csproj" />
+    <ProjectReference Include="..\TaskLayer\TaskLayer.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="SlicedSearchTaskConfig.toml">
+    <None Update="sliced-db.fasta">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sliced-db.fasta">
+    <None Update="sliced-raw.mzML">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sliced-raw.mzML">
+    <None Update="SlicedSearchTaskConfig.toml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="testFileSpecfic.toml">
+    <None Update="testFileSpecfic.toml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EngineLayer\EngineLayer.csproj">
-      <Project>{A9A105AF-E6C4-40E8-AA7D-5E6FAB72542A}</Project>
-      <Name>EngineLayer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TaskLayer\TaskLayer.csproj">
-      <Project>{04B0EE7D-5FD3-47A5-ABAA-658D177E4229}</Project>
-      <Name>TaskLayer</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.8.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.8.0\build\net35\NUnit3TestAdapter.props'))" />
-    <Error Condition="!Exists('..\packages\mzLib.1.0.246\build\net45\mzLib.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\mzLib.1.0.246\build\net45\mzLib.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <PropertyGroup>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-  </PropertyGroup>
-  <Import Project="..\packages\mzLib.1.0.246\build\net45\mzLib.targets" Condition="Exists('..\packages\mzLib.1.0.246\build\net45\mzLib.targets')" />
+
 </Project>
