--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netcoreapp2.0</TargetFrameworks>
     <DebugType>full</DebugType>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
