--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -147,6 +147,15 @@
     <Compile Include="GlobalSettingsWindow.xaml.cs">
       <DependentUpon>GlobalSettingsWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MetaUpdater.xaml.cs">
+      <DependentUpon>MetaUpdater.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MetaUpdater_No.xaml.cs">
+      <DependentUpon>MetaUpdater_No.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MetaUpdater_Yes.xaml.cs">
+      <DependentUpon>MetaUpdater_Yes.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ModForTreeView.cs" />
     <Compile Include="ModTypeForTreeView.cs" />
     <Compile Include="OutputFileForTreeView.cs" />
@@ -202,6 +211,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MetaUpdater.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MetaUpdater_No.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MetaUpdater_Yes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SearchTaskWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -255,6 +276,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="MMnice.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="update.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
