--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -151,6 +151,7 @@
       <DependentUpon>MetaUpdater.xaml</DependentUpon>
     </Compile>
     <Compile Include="ModForTreeView.cs" />
+    <Compile Include="ModTypeForGrid.cs" />
     <Compile Include="ModTypeForTreeView.cs" />
     <Compile Include="OutputFileForTreeView.cs" />
     <Compile Include="ForDisplayingInDataGrids\FinishedFileForDataGrid.cs" />
