--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -15,5 +15,5 @@
   <package id="SharpLearning.InputOutput" version="0.26.7" targetFramework="net461" />
   <package id="SharpLearning.Metrics" version="0.26.7" targetFramework="net461" />
   <package id="SharpLearning.RandomForest" version="0.26.7" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
